--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,10 @@
     <string name="dismiss_error">Dismiss</string>
     <string name="oops">Oops</string>
 
-    <string name="no_messages">No messages to display</string>
-    <string name="error_view">Couldn\'t retrieve data from server</string>
+    <string name="no_messages">No messages to display.</string>
+    <string name="no_questions">There is no question currently set.</string>
+    <string name="no_leaderboard">No leaderboard yet.</string>
+    <string name="no_announce">No announce yet.</string>
+    <string name="error_view">Couldn\'t retrieve data from the server.</string>
 
 </resources>
